# Text-To-SQL

./: Dockerfile  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  main.py  models.dvc  pyproject.toml
.dvc/: config
data/processed/: .gitignore  train_processed.parquet.dvc
data/processed/train_tokenized/: .gitignore  dataset_dict.json.dvc
data/processed/train_tokenized/test/: data-00000-of-00001.arrow.dvc  dataset_info.json.dvc  state.json.dvc
data/processed/train_tokenized/train/: .gitignore  data-00000-of-00001.arrow.dvc  state.json.dvc
data/raw/: test.parquet.dvc  train.parquet.dvc
models/bart-text2sql/: .gitignore  config.json.dvc  generation_config.json.dvc  merges.txt.dvc  model.safetensors.dvc  special_tokens_map.json.dvc  tokenizer_config.json.dvc  training_args.bin.dvc  vocab.json.dvc
src/deployment/: api.py
src/fine_tuning/: data_preparation.py  evaluation.py  finetuning.py  testing.py
