[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Fintuning llms for a text-to-sql task"
authors = [
  { name = "Youssef Atef" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "dvc>=3.59.2",
    "evaluate>=0.4.3",
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "torch>=2.7.0",
    "tqdm",
    "transformers>=4.52.1",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

